# ros2_playground

./: README.md
ament_lint_328/: CMakeLists.txt  package.xml
ament_lint_341/: .clang-format  CMakeLists.txt  package.xml
ament_lint_343/: CMakeLists.txt  package.xml
ament_lint_343/include/ament_lint_343/: lib.hpp  skip.cpp  skip.hpp  skip2.hpp
ament_lint_348/: CMakeLists.txt  package.xml
ament_lint_350/: CMakeLists.txt  package.xml
ament_lint_350/src/: ament_lint_350.cpp
ament_lint_354/: CMakeLists.txt  package.xml
ament_lint_354/include/ament_lint_354/: lib.hpp
ament_lint_364/: CMakeLists.txt  package.xml  test.cpp  test.proto
ament_lint_382/: flake8.ini  package.xml  setup.cfg  setup.py
ament_lint_382/ament_lint_382/: __init__.py
answers_ros_399059/: CMakeLists.txt  package.xml
answers_ros_399059/src/: test_node.cpp
answers_ros_399540/: package.xml  setup.cfg  setup.py
answers_ros_399540/answers_ros_399540/: dynamic_minimal.py
geometry2_405/: CMakeLists.txt  package.xml
geometry2_405/src/: can_transform_test.cpp
rclcpp_1792/: CMakeLists.txt  package.xml
rclcpp_1792/msg/: Foo.msg
rclcpp_1792/src/: test_foo.cpp
rclcpp_1819/: CMakeLists.txt  package.xml
rclcpp_1819/src/: test.cpp
rclcpp_1827/: CMakeLists.txt  package.xml
rclcpp_1827/msg/: BoundedString.msg
rclcpp_1827/src/: rclcpp_1827.cpp
rclcpp_1906/: CMakeLists.txt  README.md  package.xml
rclcpp_1906/src/: test_node.cpp
rclpy_822/: README.md  memory.sh
rclpy_822/test_client/: package.xml  setup.py
rclpy_822/test_client/test_client/: test_client.py
rclpy_822/test_interface/: CMakeLists.txt  package.xml
rclpy_822/test_interface/srv/: InferService.srv
rclpy_822/test_service/: CMakeLists.txt  package.xml
rclpy_822/test_service/src/: test_service.cpp
ros2_documentation_2297/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_documentation_2297/tutorial_interfaces/: CMakeLists.txt  package.xml
ros2_documentation_2297/tutorial_interfaces/src/: publisher.cpp  subscriber.cpp
ros2cli_675/: CMakeLists.txt  package.xml
ros2cli_675/src/: my_node.cpp
ros2cli_715/: package.xml  setup.cfg  setup.py
ros2cli_715/ros2cli_715/: hello-world.py
